--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
   },
   "homepage": "https://github.com/ShaokangJiang/auto-checkin#readme",
   "dependencies": {
+    "@actions/core": "^1.2.6",
+    "cookie": "^0.4.1",
     "moment-timezone": "^0.5.33",
     "node-fetch": "^2.6.1",
+    "node-html-parser": "^3.0.3",
     "puppeteer": "^8.0.0",
-    "solarlunar": "^2.0.7"
+    "solarlunar": "^2.0.7",
+    "urlencode": "^1.1.0"
   }
 }
