--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-html-parser": "^3.0.3",
     "puppeteer": "^8.0.0",
     "solarlunar": "^2.0.7",
+    "uid-generator": "^2.0.0",
     "urlencode": "^1.1.0"
   }
 }
